# tinyproxy-applet

./: Cargo.toml  Makefile  README.md
flatpak/: README.md  com.example.tinyproxy-applet.desktop  com.example.tinyproxy-applet.metainfo.xml  com.example.tinyproxy-applet.yml
src/: main.rs
