[package]
name = "tinyproxy-applet"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["applet", "tokio"] }
tokio = { version = "1", features = ["full"] }
zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }

[profile.release]
opt-level = "s"
